--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Listings#show</h1>
-<p>Find me in app/views/listings/show.html.erb</p>
+<p><%= @listing.address %></p>
+<p><%= @listing.bedrooms %> Bedrooms</p>
+<p><%= @listing.bathrooms %> Bathrooms</p>
+<p>$ <%= @listing.price %></p>
+<p><%= @listing.square_feet %>Sqft</p>
+<p><%= @listing.city %></p>
+<p><%= @listing.description %></p>
